--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,11 +1,20 @@
+---
+root: true
+
+plugins:
+  - babel
+
 env:
   browser: true
-  es2021: true
   node: true
-extends: airbnb-base
-parserOptions:
-  ecmaVersion: latest
-  sourceType: module
+
+extends:
+  - 'eslint:recommended' 
+  - 'airbnb-base' 
+  - 'plugin:import/recommended'
+
+parser: '@babel/eslint-parser'
+
 rules:
   no-console: 0
   import/extensions: 0
