--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bootstrap": "^5.3.2",
     "npm-check-updates": "^16.14.12",
     "sass": "^1.69.5",
-    "sass-loader": "^13.3.2"
+    "sass-loader": "^13.3.2",
+    "yup": "^1.3.3"
   }
 }
