--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "npm-check-updates": "^16.14.12",
+    "on-change": "^5.0.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "yup": "^1.3.3"
