--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "i18next": "^23.7.11",
     "npm-check-updates": "^16.14.12",
     "on-change": "^5.0.0",
     "sass": "^1.69.5",
