update webpack configs

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -18,3 +18,4 @@ parser: '@babel/eslint-parser'
 rules:
   no-console: 0
   import/extensions: 0
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
